--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @media only screen and (max-width: 600 px) {
     body {
-        background-color: #391111;
+        background-color: #111E39;
     }
 }
