--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ h2 {
 
 h3 {
     color: #28A2CB;
-    font-size: 15px;
+    font-size: 13px;
     text-align: center;
     font-family: SegoeBI;
     margin-top: 50px;
@@ -81,13 +81,13 @@ h3 {
     color: #F1F1F1;
     font-size: 15px;
     font-family: SegoeL;
-    margin: 15px;
+    margin: 13px;
     line-height: 160%;
 }
 
 p {
     color: #F1F1F1;
-    font-size: 15px;
+    font-size: 13px;
     font-family: SegoeL;
     margin: 30px;
     line-height: 160%;
@@ -96,7 +96,7 @@ p {
 li {
     color: #F1F1F1;
     text-align: center;
-    font-size: 15px;
+    font-size: 13px;
     font-family: SegoeB
 }
 /**/
@@ -236,12 +236,21 @@ li {
 /*Footer*/
 .footer {
     background: #101010;
-    height: 100px;
-    color: #F1F1F1;
-    font-size: 12px;
-    font-family: SegoeB;
+    height: 100%;
     position: relative;
+}
+
+.p-footer {
+    color: #F1F1F1;
+    font-size: 11px;
+    font-family: SegoeB;
     text-align: center;
+    margin-bottom: 0px;
+}
+
+.sociale-medier {
+    display: flex;
+    justify-content: center;
 }
 
 /**/
